@@ -283,25 +283,6 @@ Info: The copyright file contains the incomplete Debian packaging
  to court.  If you provide a notice, you may as well provide one that's
  legally recognized in a broader range of countries.
 
-Tag: copyright-refers-to-bad-php-license
-Severity: serious
-Certainty: possible
-Info: This package appears to be covered by version 2.x of the PHP license,
- which is not appropriate for anything other than the PHP interpreter
- itself.
- .
- Note that PEAR modules are not a part of the PHP interpreter and cannot
- use this license.
-Ref: https://ftp-master.debian.org/REJECT-FAQ.html, #616436
-
-Tag: copyright-refers-to-problematic-php-license
-Severity: serious
-Certainty: wild-guess
-Info: This package appears to be covered by version 3.0 (exactly) of the
- PHP license.  This license is not applicable to anything that is not PHP
- and has no contributions from the PHP Group.
-Ref: https://ftp-master.debian.org/REJECT-FAQ.html
-
 Tag: copyright-without-copyright-notice
 Severity: normal
 Certainty: certain
