@@ -18,3 +18,6 @@ license-problem-non-free-RFC-BCP78 ~~ license && document && bcp && restriction 
 # if the "redeeming" part is in the next block
 # keyword document is here in order to benefit for other license keyword and a shortcut for documentation
 license-problem-gfdl-invariants ~~ license && document && gnu && copy && documentation ~~ gnu free documentation license ~~ (?'rawcontextbefore'(?:(?:(?!a [ ] copy [ ] of [ ] the [ ] license [ ] is).){1024}|(?:[ ] copy [ ] of [ ] the [ ] license [ ] is.{0,1024}?))) gnu [ ] free [ ] documentation [ ] license (?'rawgfdlsections'(?:(?!gnu [ ] free [ ] documentation [ ] license).){0,1024}?) (?:a [ ] copy [ ] of [ ] the [ ] license [ ] is|this [ ] document [ ] is [ ] distributed)  ~~ (?'rawcontextbefore'(?:(?:(?!a [ ] copy [ ] of [ ] the [ ] license [ ] is).){1024}|\A(?:(?!a [ ] copy [ ] of [ ] the [ ] license [ ] is).){0,1024}|(?:[ ] copy [ ] of [ ] the [ ] license [ ] is.{0,1024}?))) gnu [ ] free [ ] documentation [ ] license (?'rawgfdlsections'(?:(?!gnu [ ] free [ ] documentation [ ] license).){0,1024}?) (?:a [ ] copy [ ] of [ ] the [ ] license [ ] is|this [ ] document [ ] is [ ] distributed) ~~ license-problem-gfdl-invariants
+# php license
+license-problem-php-license ~~ www.php.net && group@php.net && phpfoo && conjunction && php ~~ this product includes php ~~ php [ ] license [ ]?[,;][ ]? version [ ] 3(?:\.\d+)? ~~ ~~ php-source-whitelist
+license-problem-bad-php-license ~~ www.php.net && add-on && conjunction ~~ this product includes php ~~ php [ ] license [ ]?[,;][ ]? version [ ] 2(?:\.\d+)? ~~ ~~ php-source-whitelist
