@@ -1,0 +1,70 @@
+-------------------------------------------------------------------- 
+                  The PHP License, version 2.01
+Copyright (c) 1999 The PHP Group. All rights reserved.
+-------------------------------------------------------------------- 
+
+Redistribution and use in source and binary forms, with or without
+modification, is permitted provided that the following conditions
+are met:
+
+  1. Redistributions of source code must retain the above copyright
+     notice, this list of conditions and the following disclaimer. 
+ 
+  2. Redistributions in binary form must reproduce the above 
+     copyright notice, this list of conditions and the following 
+     disclaimer in the documentation and/or other materials provided
+     with the distribution.
+ 
+  3. The name "PHP" must not be used to endorse or promote products 
+     derived from this software without prior permission from the 
+	 PHP Group.  This does not apply to add-on libraries or tools
+	 that work in conjunction with PHP.  In such a case the PHP
+	 name may be used to indicate that the product supports PHP.
+ 
+  4. The PHP Group may publish revised and/or new versions of the
+     license from time to time. Each version will be given a
+	 distinguishing version number.
+     Once covered code has been published under a particular version
+	 of the license, you may always continue to use it under the
+	 terms of that version. You may also choose to use such covered
+	 code under the terms of any subsequent version of the license
+	 published by the PHP Group. No one other than the PHP Group has
+	 the right to modify the terms applicable to covered code created
+	 under this License.
+
+  5. Redistributions of any form whatsoever must retain the following
+     acknowledgment:
+     "This product includes PHP, freely available from
+	 http://www.php.net/".
+
+  6. Permission to freely distribute and use Zend as an integrated
+     part of PHP is granted, under the conditions of version 0.91
+	 of the Zend License.
+	 The license is bundled with the Zend engine, and is available
+	 at http://www.zend.com/license/0_91.txt, or by contacting
+	 license@zend.com.
+
+
+
+THIS SOFTWARE IS PROVIDED BY THE PHP DEVELOPMENT TEAM ``AS IS'' AND 
+ANY EXPRESSED OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
+THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A 
+PARTICULAR PURPOSE ARE DISCLAIMED.  IN NO EVENT SHALL THE PHP
+DEVELOPMENT TEAM OR ITS CONTRIBUTORS BE LIABLE FOR ANY DIRECT, 
+INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES 
+(INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR 
+SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)
+HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT,
+STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
+ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED
+OF THE POSSIBILITY OF SUCH DAMAGE.
+
+-------------------------------------------------------------------- 
+
+This software consists of voluntary contributions made by many
+individuals on behalf of the PHP Group.
+
+The PHP Group can be contacted via Email at php-group@php.net.
+
+For more information on the PHP Group and the PHP project, 
+please see <http://www.php.net>.
