@@ -1,0 +1,3 @@
+E: cruft-bad-php source: license-problem-bad-php-license src/2_01.txt
+E: cruft-bad-php source: license-problem-bad-php-license src/2_02.txt
+E: cruft-bad-php source: license-problem-php-license src/3_01.txt
