@@ -2,6 +2,10 @@ lintian (2.5.26) UNRELEASED; urgency=medium
 
   XXX: generate tag summary with private/generate-tag-summary
 
+  * cruft/cruft.{desc,pm}:
+    + [BR] Use license checking framework for checking php license.
+      (Closes: #752540).
+
   * data/debhelper/dh_commands:
     + [BR] Add patch from  Piotr Ożarowski, dh-python2
       moved to dh-python package (Closes: #740161).
